<resources>
    <string name="app_name">CTimes</string>
    <string name="title_stories">Stories</string>
    <string name="title_wallpaper">Movies</string>
    <string name="title_media">Media</string>
    <string name="title_geographic">AWord</string>
    <string name="AUTHENTICATION_KEY">api-key=owT6IxIazx3ylrlQEAh953VLdPZIMhBN</string>
    <string name="TOP_STORY_REQUEST_URL">https://api.nytimes.com/svc/topstories/v2/</string>
    <string-array name="CONTENT_SUBJECT">
        <item>home</item>
        <item>arts</item>
        <!--<item>automobiles</item>-->
        <item>books</item>
        <!--<item>business</item>-->
        <item>fashion</item>
        <item>food</item>
        <item>health</item>
        <item>insider</item>
        <item>magazine</item>
        <item>movies</item>
        <item>national</item>
        <item>nyregion</item>
        <item>obituaries</item>
        <item>opinion</item>
        <item>politics</item>
        <!--<item>realestate</item>-->
        <item>science</item>
        <item>sports</item>
        <item>sundayreview</item>
        <item>technology</item>
        <item>theater</item>
        <item>tmagazine</item>
        <item>travel</item>
        <item>upshot</item>
        <!--<item>world</item>-->
    </string-array>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Subscribe CTimes Subject.Subscribe CTimes Subject.\nSubscribe CTimes Subject.Subscribe CTimes Subject.\nSubscribe CTimes Subject.\nSubscribe CTimes Subject.Subscribe CTimes Subject.\nSubscribe CTimes Subject.Subscribe CTimes Subject.\nSubscribe CTimes Subject.\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="exit_app">Press again and exit application!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_book_fragment">Hello book fragment</string>
    <string name="title_activity_news_details">NewsDetailsActivity</string>
    <string name="notification">Notification</string>
    <string name="networkReconnected">Network reconnected \n enjoy your reading</string>
    <string name="networkDisConnected">Network disconnected\n Please check your network connection</string>
    <string name="title_setting">Settings</string>
    <string name="hello_media_fragment">hello media fragment</string>
    <string name="hello_geographic_fragment">hello geographic fragment</string>
    <string name="hello_setting_fragment">hello setting fragment</string>
    <string name="open_navigator">open navigator</string>
    <string name="close_navigator">close navigator</string>
    <string name="title_activity_book_catalog_details">BookCatalogDetailsActivity</string>
    <string name="title_activity_book_details">BookDetailsActivity</string>
    <string name="about_pager">About</string>
    <string name="action_inbox">Inbox</string>
    <string name="action_github">Github</string>
    <string name="action_blog">Blog</string>
    <string name="action_android">Android</string>
    <string name="action_about">About</string>
    <string name="action_exit">Exit</string>
    <string name="title_activity_navigator_details">NavigatorDetailsActivity</string>
    <string name="playVideo">Video</string>
    <string name="loading">loading...</string>
    <string name="title_activity_music_play">MusicPlay</string>
    <string name="fiction_book">Fiction</string>
    <string name="nonfiction_book">Nonfiction</string>
</resources>
